--- a/app.json
+++ b/app.json
@@ -1,7 +1,12 @@
 {
   "expo": {
-    "name": "niceGDL",
-    "slug": "niceGDL",
+    "name": "niceGDL 2.0",
+    "slug": "nicegdlv2",
+    "platforms": [
+      "ios",
+      "android",
+      "web"
+    ],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -17,10 +22,28 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": false,
+      "bundleIdentifier": "com.richidoes.niceGDL"
+    },
+    "android": {
+      "package": "com.richidoes.niceGDL",
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyAN-63Ws2XOMmFLJVxCDFj7zcDtAjZVgnA"
+        }
+      },
+      "permissions": [
+        "CAMERA_ROLL",
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE",
+        "LOCATION",
+        "ACCESS_COARSE_LOCATION",
+        "ACCESS_FINE_LOCATION"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "description": "Aplicación móvil con el objetivo de gestionar los lugares de interés que los usuarios publiquen y reseñen sobre  la ciudad de Guadalajara,  donde  podremos encontrar secciones como : \n-Lugares publicados y su información detallada.\n-Favoritos( si es que el usuario ya esta registrado). \n-Los mejores 5 lugares (basado en las mejores puntuaciones de todos los lugares publicados a la fecha).\n-Buscador dentro de la aplicación.\n-Cuenta ( donde podrá gestionar su información y cambiar su nombre de usuario, foto de perfil, email y contraseña).\n"
   }
 }
