--- a/package.json
+++ b/package.json
@@ -8,11 +8,34 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "~5.2.6",
+    "@react-navigation/native": "~5.1.5",
+    "@react-navigation/stack": "~5.2.10",
+    "base-64": "0.1.0",
     "expo": "~39.0.2",
+    "expo-facebook": "~9.0.0",
+    "expo-image-picker": "~9.1.0",
+    "expo-location": "~9.0.0",
+    "expo-permissions": "~9.3.0",
     "expo-status-bar": "~1.0.2",
+    "firebase": "7.9.0",
+    "firesql": "~2.0.2",
+    "lodash": "^4.17.20",
+    "random-uuid-v4": "^0.0.9",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+    "react-native-easy-toast": "^1.2.0",
+    "react-native-elements": "1.2.7",
+    "react-native-gesture-handler": "~1.7.0",
+    "react-native-keyboard-aware-scrollview": "^2.1.0",
+    "react-native-maps": "^0.27.1",
+    "react-native-open-maps": "0.3.5",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.4",
+    "react-native-screens": "~2.10.1",
+    "react-native-snap-carousel": "~3.9.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
